--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Linux Mint Red Media Player</title>
+    <title>Kickspot</title>
     <style>
         body {
             font-family: Arial, sans-serif;
