--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </head>
 <body>
     <header>
-        <h1>Linux Mint Red Media Player</h1>
+        <h1>ISO CONSOLE - ISF LEXUS 350</h1>
     </header>
     <main>
         <div id="mediaPlayer">
