--- a/index.html
+++ b/index.html
@@ -85,14 +85,13 @@
         <div id="knowledgeBase">
             <h2>Knowledge Base</h2>
             <div id="knowledgeContent">
-                <!-- Sample knowledge items -->
+                <!-- knowledge items -->
                 <div class="knowledge-item">
-                    <h3>Sample Title 1</h3>
-                    <p>Sample Content 1</p>
-                </div>
-                <div class="knowledge-item">
-                    <h3>Sample Title 2</h3>
-                    <p>Sample Content 2</p>
+                   <h1>Chip</h1>
+                    <h3>ISO PLAYER</h3>
+                    <p>ISO: ALL</p>
+
+                    <div>Insert ISO</div>
                 </div>
             </div>
         </div>
