--- a/index.html
+++ b/index.html
@@ -3,318 +3,69 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Linux Mint Red Program: D Class S</title>
+    <title>Variable Interface</title>
     <style>
+        /* Inline CSS for styling */
         body {
             font-family: Arial, sans-serif;
-            background-color: #282828;
-            color: #f0f0f0;
-            margin: 0;
-            padding: 0;
-            text-align: center;
+            background-color: #f4f4f4;
             display: flex;
-            flex-direction: column;
-            min-height: 100vh;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
         }
-        header {
-            background-color: #a83232;
+        .container {
+            background: #fff;
             padding: 20px;
-        }
-        main {
-            padding: 20px;
-            flex: 1;
-            overflow: auto;
-        }
-        footer {
-            background-color: #a83232;
-            padding: 10px;
-            position: sticky;
-            bottom: 0;
-            width: 100%;
-            flex-shrink: 0;
-        }
-        #program {
-            width: 100%;
-            max-width: 800px;
-            margin: 20px auto;
-            background-color: #383838;
             border-radius: 10px;
-            padding: 20px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
         }
-        #program video, #program audio {
-            width: 100%;
-            outline: none;
+        .label {
+            font-size: 1.2em;
+            margin-bottom: 10px;
         }
-        #controls {
-            margin-top: 10px;
+        .value {
+            font-size: 1.5em;
+            font-weight: bold;
         }
-        button {
+        .button {
+            display: inline-block;
             padding: 10px 20px;
-            margin: 5px;
-            background-color: #a83232;
-            color: #f0f0f0;
+            margin-top: 20px;
+            font-size: 1em;
+            color: #fff;
+            background: #007bff;
             border: none;
             border-radius: 5px;
             cursor: pointer;
         }
-        #knowledgeBase {
-            margin-top: 20px;
-            text-align: left;
-        }
-        .knowledge-item {
-            background-color: #383838;
-            margin: 10px 0;
-            padding: 10px;
-            border-radius: 5px;
-        }
-        #knowledgeForm input, #knowledgeForm textarea {
-            width: 100%;
-            padding: 10px;
-            margin: 5px 0;
-            border-radius: 5px;
-            border: 1px solid #a83232;
-            background-color: #282828;
-            color: #f0f0f0;
-        }
-        #knowledgeForm button {
-            width: 100%;
-        }
-        #lab {
-            margin-top: 20px;
-            text-align: left;
-        }
-        #labForm input, #labForm textarea {
-            width: 100%;
-            padding: 10px;
-            margin: 5px 0;
-            border-radius: 5px;
-            border: 1px solid #a83232;
-            background-color: #282828;
-            color: #f0f0f0;
-        }
-        #labForm button {
-            width: 100%;
-        }
     </style>
 </head>
 <body>
-    <header>
-        <h1>Linux Mint Red Program: D Class S</h1>
-    </header>
-    <main>
-        <div id="program">
-            <video id="videoPlayer" controls>
-                Your browser does not support the video tag.
-            </video>
-            <audio id="audioPlayer" controls>
-                Your browser does not support the audio tag.
-            </audio>
-            <div id="controls">
-                <input type="file" id="fileInput" accept="audio/*,video/*" multiple>
-                <button onclick="playMedia()">Play</button>
-                <button onclick="loopMedia()">Loop Current</button>
-                <button onclick="sequenceLoop()">Sequence Loop</button>
-            </div>
-        </div>
-        <div id="knowledgeBase">
-            <h2>Knowledge Base</h2>
-            <div id="knowledgeContent">
-                <!-- Knowledge items will be dynamically added here -->
-            </div>
-            <form id="knowledgeForm" onsubmit="addKnowledge(event)">
-                <input type="text" id="titleInput" placeholder="Title" required>
-                <textarea id="contentInput" placeholder="Content" required></textarea>
-                <button type="submit">Add Knowledge</button>
-            </form>
-        </div>
-        <div id="lab">
-            <h2>Lab (^%^INFINITYOVO%LAB)</h2>
-            <form id="labForm" onsubmit="addLabKnowledge(event)">
-                <input type="text" id="labTitleInput" placeholder="Experiment Title" required>
-                <textarea id="labContentInput" placeholder="Experiment Details" required></textarea>
-                <button type="submit">Add Lab Knowledge</button>
-            </form>
-            <div id="labContent">
-                <!-- Lab experiment results will be dynamically added here -->
-            </div>
-        </div>
-    </main>
-    <footer>
-        <p>&copy; 2024 Linux Mint Red. All Rights Reserved.</p>
-    </footer>
 
-    <script>
-        const fileInput = document.getElementById('fileInput');
-        const videoPlayer = document.getElementById('videoPlayer');
-        const audioPlayer = document.getElementById('audioPlayer');
-        const knowledgeContent = document.getElementById('knowledgeContent');
-        const labContent = document.getElementById('labContent');
-        const titleInput = document.getElementById('titleInput');
-        const contentInput = document.getElementById('contentInput');
-        const labTitleInput = document.getElementById('labTitleInput');
-        const labContentInput = document.getElementById('labContentInput');
-        let mediaFiles = [];
-        let currentIndex = 0;
-        let isSequenceLoop = false;
-        let db;
+<div class="container">
+    <div class="label">Variable a:</div>
+    <div id="variable-value" class="value"></div>
+    <button class="button" onclick="updateVariable()">Update Variable</button>
+</div>
 
-        // Initialize IndexedDB
-        function initDB() {
-            let request = indexedDB.open("KnowledgeDB", 1);
+<script>
+    // Inline JavaScript for chip syntax functionality
 
-            request.onupgradeneeded = function(event) {
-                db = event.target.result;
-                let objectStore = db.createObjectStore("knowledge", { keyPath: "id", autoIncrement: true });
-                objectStore.createIndex("title", "title", { unique: false });
-                objectStore.createIndex("content", "content", { unique: false });
-                objectStore.createIndex("tag", "tag", { unique: false });
-            };
+    // Define the variable in a chip-like syntax
+    let chip = {
+        variable_a: 'seven'
+    };
 
-            request.onsuccess = function(event) {
-                db = event.target.result;
-                fetchKnowledge();
-                fetchLabKnowledge();
-            };
+    // Function to update the variable value in the UI
+    function updateVariable() {
+        chip.variable_a = prompt("Enter new value for variable a:", chip.variable_a);
+        document.getElementById('variable-value').innerText = chip.variable_a;
+    }
 
-            request.onerror = function(event) {
-                console.error("Database error: " + event.target.errorCode);
-            };
-        }
+    // Initialize the UI with the variable's value
+    document.getElementById('variable-value').innerText = chip.variable_a;
+</script>
 
-        function addKnowledge(event) {
-            event.preventDefault();
-            let title = titleInput.value;
-            let content = contentInput.value;
-            let transaction = db.transaction(["knowledge"], "readwrite");
-            let objectStore = transaction.objectStore("knowledge");
-
-            let newItem = { title, content, tag: "knowledge" };
-            objectStore.add(newItem);
-
-            transaction.oncomplete = function() {
-                fetchKnowledge();
-                titleInput.value = '';
-                contentInput.value = '';
-            };
-
-            transaction.onerror = function(event) {
-                console.error("Transaction error: " + event.target.errorCode);
-            };
-        }
-
-        function addLabKnowledge(event) {
-            event.preventDefault();
-            let title = labTitleInput.value;
-            let content = labContentInput.value;
-            let transaction = db.transaction(["knowledge"], "readwrite");
-            let objectStore = transaction.objectStore("knowledge");
-
-            let newItem = { title, content, tag: "^%^INFINITYOVO%LAB" };
-            objectStore.add(newItem);
-
-            transaction.oncomplete = function() {
-                fetchLabKnowledge();
-                labTitleInput.value = '';
-                labContentInput.value = '';
-            };
-
-            transaction.onerror = function(event) {
-                console.error("Transaction error: " + event.target.errorCode);
-            };
-        }
-
-        function fetchKnowledge() {
-            let transaction = db.transaction(["knowledge"], "readonly");
-            let objectStore = transaction.objectStore("knowledge");
-
-            let request = objectStore.getAll();
-
-            request.onsuccess = function(event) {
-                knowledgeContent.innerHTML = "";
-                request.result.forEach(item => {
-                    if (item.tag === "knowledge") {
-                        let div = document.createElement("div");
-                        div.className = "knowledge-item";
-                        div.innerHTML = `<h3>${item.title}</h3><p>${item.content}</p><p>Tag: ${item.tag}</p>`;
-                        knowledgeContent.appendChild(div);
-                    }
-                });
-            };
-        }
-
-        function fetchLabKnowledge() {
-            let transaction = db.transaction(["knowledge"], "readonly");
-            let objectStore = transaction.objectStore("knowledge");
-
-            let request = objectStore.getAll();
-
-            request.onsuccess = function(event) {
-                labContent.innerHTML = "";
-                request.result.forEach(item => {
-                    if (item.tag === "^%^INFINITYOVO%LAB") {
-                        let div = document.createElement("div");
-                        div.className = "knowledge-item";
-                        div.innerHTML = `<h3>${item.title}</h3><p>${item.content}</p><p>Tag: ${item.tag}</p>`;
-                        labContent.appendChild(div);
-                    }
-                });
-            };
-        }
-
-        function playMedia() {
-            mediaFiles = Array.from(fileInput.files);
-            currentIndex = 0;
-            playCurrentMedia();
-        }
-
-        function playCurrentMedia() {
-            if (mediaFiles.length > 0) {
-                const file = mediaFiles[currentIndex];
-                const url = URL.createObjectURL(file);
-                const isVideo = file.type.startsWith('video');
-                videoPlayer.style.display = isVideo ? 'block' : 'none';
-                audioPlayer.style.display = !isVideo ? 'block' : 'none';
-
-                if (isVideo) {
-                    videoPlayer.src = url;
-                    videoPlayer.play();
-                } else {
-                    audioPlayer.src = url;
-                    audioPlayer.play();
-                }
-            }
-        }
-
-        function loopMedia() {
-            if (videoPlayer.style.display === 'block') {
-                videoPlayer.loop = true;
-                audioPlayer.loop = false;
-            } else {
-                videoPlayer.loop = false;
-                audioPlayer.loop = true;
-            }
-        }
-
-        function sequenceLoop() {
-            isSequenceLoop = true;
-            videoPlayer.loop = false;
-            audioPlayer.loop = false;
-
-            if (videoPlayer.style.display === 'block') {
-                videoPlayer.onended = playNextMedia;
-            } else {
-                audioPlayer.onended = playNextMedia;
-            }
-        }
-
-        function playNextMedia() {
-            if (isSequenceLoop) {
-                currentIndex = (currentIndex + 1) % mediaFiles.length;
-                playCurrentMedia();
-            }
-        }
-
-        document.addEventListener('DOMContentLoaded', initDB);
-    </script>
 </body>
 </html>
